@@ -1,3 +1,7 @@
+7 May 2007: Wouter
+	- EDNS read from query, used to make reply smaller.
+	- advertised edns value constants.
+
 4 May 2007: Wouter
 	- msgreply sizefunc is more accurate.
 	- config settings for rrset cache size and slabs.
